# Inky

./: .env.example  .gitignore  README.md  justfile  pyproject.toml  requirements.txt  tasks.md
data/styles/: .gitkeep
scripts/: download_references.py  run_daily.sh  setup_mac.sh  setup_pi.sh
src/: cli.py  config.py  logging_utils.py  main.py
src/integrations/: google_drive.py  inky_display.py
src/models/: reference_analysis.py  style_profiles.py
src/pipeline/: diffusion.py  nst.py  postprocess.py  preprocess.py  selector.py
src/scheduler/: daily_job.py
src/utils/: files.py  image_ops.py  metadata.py
tests/: test_cli.py  test_config.py  test_diffusion.py  test_main.py  test_nst.py  test_reference_analysis.py  test_selector.py  test_style_profiles.py
